Fixed z-index name of .order-cta

--- a/styles/layouts/_order-cta.scss
+++ b/styles/layouts/_order-cta.scss
@@ -7,7 +7,7 @@
   height: $order-cta-height;
   padding: 4px;
   background-color: $white;
-  z-index: $bookmark-toaset-level;
+  z-index: $order-cta-level;
 
   .btn-ghost {
     flex-flow: 0;
